unpackaged/main/default/objects/Zendesk_Entity__c/Zendesk_Entity__c.object-meta.xml
<CustomObject>
    <description>Stores Zendesk users and queues</description>
    <label>Zendesk Entity</label>
    <nameField>
        <label>Zendesk Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zendesk Entities</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>