unpackaged/main/default/objects/Zendesk_Entity__c/fields/Entity_Email__c.field-meta.xml
<CustomField>
    <fullName>Entity_Email__c</fullName>
    <description>Created During PSE Service Migration Project</description>
    <inlineHelpText>The associated email address of the Zendesk Entity (User or Group)</inlineHelpText>
    <label>Entity Email</label>
    <type>Email</type>
</CustomField>