unpackaged/main/default/objects/Zendesk_Entity__c/fields/Entity_ID__c.field-meta.xml
<CustomField>
    <fullName>Entity_ID__c</fullName>
    <description>Created During PSE Service Migration Project</description>
    <inlineHelpText>The associated ID of the Zendesk Entity (User or Group)</inlineHelpText>
    <label>Entity ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>