unpackaged/main/default/objects/Zendesk_Entity__c/fields/Zendesk_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Zendesk_Group_ID__c</fullName>
    <description>Created During PSE Service Migration Project</description>
    <inlineHelpText>The associated Group ID of the Zendesk Entity</inlineHelpText>
    <label>Zendesk Group ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>