unpackaged/main/default/objects/Zendesk_Entity__c/recordTypes/Queue.recordType-meta.xml
<RecordType>
    <fullName>Queue</fullName>
    <active>true</active>
    <label>Queue</label>
</RecordType>