unpackaged/main/default/objects/Zendesk_Entity__c/recordTypes/User.recordType-meta.xml
<RecordType>
    <fullName>User</fullName>
    <active>true</active>
    <label>User</label>
</RecordType>