unpackaged/main/default/objects/Zendesk_Entity__c/listViews/Zendesk_Groups.listView-meta.xml
<ListView>
    <fullName>Zendesk_Groups</fullName>
    <columns>NAME</columns>
    <columns>Entity_ID__c</columns>
    <columns>Zendesk_Group_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Zendesk_Entity__c.Queue</value>
    </filters>
    <label>Zendesk Groups</label>
</ListView>